--- a/src/index.css
+++ b/src/index.css
@@ -278,6 +278,7 @@ b{
 .AboutPage{
   display: flex;
   justify-content: space-evenly;
+  flex-direction: column;
   min-height: 80vh;
   margin-top: 100px;
   align-items: center;
