--- a/src/index.css
+++ b/src/index.css
@@ -346,7 +346,7 @@ b{
   align-items: center;
   justify-content: center;
   margin: 0px 25px 25px 0px;
-  border: 3px solid #431f47;
+  border: 3px solid darkslategrey;
   font-size: 64px;
   border-radius: 5px;
   transition: 0.5s;
